# futures-journal

./: CLAUDE.md  README.md  package-lock.json  package.json  vite.config.js
.github/workflows/: pages.yml  release.yml
docs/: README.md  faq.md
docs/concepts/: accounts-and-categories.md  drawdown-modes.md  fees-and-fee-attribution.md  plans-and-trades.md  r-multiples.md  the-risk-engine.md  the-two-ledgers.md
docs/getting-started/: install.md  philosophy.md  quickstart.md
docs/guides/: archiving-a-failed-combine.md  attaching-screenshots.md  configuring-prop-firm-rules.md  logging-a-normal-trade.md  logging-a-scale-in-trade.md  logging-a-scale-out-trade.md  moving-your-stop.md  overriding-a-risk-block.md  recording-a-payout.md  recording-subscription-fees.md  reviewing-a-closed-trade.md  setting-up-your-first-account.md  taking-a-plan.md  transferring-between-accounts.md  using-tags.md  writing-a-plan.md
scripts/: seed_test_data.py
site/: README.md  next.config.ts  package-lock.json  package.json
site/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
site/components/: CheckoutButton.tsx  DocSidebar.tsx  (+10 more)
src/: index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial.sql  002_account_rules_notes.sql  003_plan_tags.sql  004_trade_risk_override.sql  005_trade_review.sql  006_drawdown_mode.sql  007_account_rule_refinements.sql  008_account_category.sql  009_transfers_and_tx_types.sql
src-tauri/src/: lib.rs  main.rs
tasks/: lessons.md  todo.md
(+48 files in other folders)
